# face-cast

./: .gitignore  README.md  pyproject.toml  schema.sql
docs/: arch.mmd
server/: install-server.ps1  install-service.ps1  install-ui.ps1
src/face_cast/client/: api.py  cli.py  cluster.py  db.py  extract.py  jellyfin.py  phase2.py  portrait.py
src/face_cast/client/web/: app.py
src/face_cast/client/web/static/: style.css
src/face_cast/client/web/templates/: _base.html  candidates.html  folder.html  folders.html  index.html  person.html
src/face_cast/server/: main.py
src/face_cluster/client/: api.py  cli.py  cluster.py  db.py  nfo.py  phase2.py
src/face_cluster/server/: main.py
