[project]
name = "face-cluster"
version = "0.1.0"
description = "媒体库人脸识别 + 同人聚类工具. 服务端 GPU 推理, 客户端编排, 多模型友好 schema."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "psyduck" }]
license = { text = "MIT" }

# 客户端 + 通用依赖
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "requests>=2.32",
    "typer>=0.12",
    "rich>=13.7",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5",
    "lxml>=5.2",
]

[project.optional-dependencies]
# 服务端额外依赖 (在 .11 上装). 故意保持极简: bottle 单文件 + waitress WSGI.
server = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.20",
    "bottle>=0.13",
    "waitress>=3.0",
    "pillow>=10.0",
]

[project.scripts]
face-server = "face_cluster.server.main:cli"
face-cluster = "face_cluster.client.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_cluster"]

[tool.uv]
package = true
