[project]
name = "face-cast"
version = "0.1.0"
description = "媒体库人脸识别 + 同人聚类工具. 服务端 GPU 推理, 客户端编排, 多模型友好 schema."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "psyduck" }]
license = { text = "MIT" }

# 客户端 + 通用依赖
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "requests>=2.32",
    "typer>=0.12",
    "rich>=13.7",
    "hdbscan>=0.8.38",
    "scikit-learn>=1.5",
    "lxml>=5.2",
    "bottle>=0.13",     # Web UI
    "jinja2>=3.1",      # UI 模板
    "waitress>=3.0",    # 生产 WSGI
]

[project.optional-dependencies]
# 服务端额外依赖 (在 .11 上装). 故意保持极简: bottle 单文件 + waitress WSGI.
server = [
    "insightface>=0.7.3",
    "onnxruntime-gpu>=1.20",
    "bottle>=0.13",
    "waitress>=3.0",
    "pillow>=10.0",
]

[project.scripts]
face-server = "face_cast.server.main:cli"
face-cast = "face_cast.client.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/face_cast"]

# 包含 web UI 的 templates/static
[tool.hatch.build.targets.wheel.force-include]
"src/face_cast/client/web/templates" = "face_cast/client/web/templates"
"src/face_cast/client/web/static" = "face_cast/client/web/static"

[tool.uv]
package = true
